# insights-mcp-core

./: README.md  pyproject.toml
src/insights_mcp_core/: client.py  mcp.py
